<resources>
    <string name="version">Version - 1.4</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_master_authentication">MasterAuthentication</string>
    <string name="title_activity_lock">LockActivity</string>
    <string name="title_activity_restart">Restart</string>
    <string name="title_activity_server_block">ServerBlock</string>
    <string name="app_name">Teacher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dashboard">SchoolCom</string>
    <string name="action_search">Search</string>
    <string name="action_queue">Queue</string>
    <string name="action_logout">Logout</string>
    <string name="queue">Sql queries in queue - uploaded in next sync</string>
    <string name="table">Table</string>
    <string name="action">Action</string>
    <string name="query">Query</string>
    <string name="no_internet">no wifi / internet</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="homework">Homework</string>
    <string name="coscholastic">CoScholastic</string>
    <string name="cce_student_profile">CCE Student Profile</string>
    <string name="sms">SMS</string>
    <string name="map_student_subject">Map Students</string>
    <string name="map_subject_teacher">Map Subject Teacher</string>
    <string name="student_profile">Student Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="cc">content description</string>
    <string name="pt">Please tap on the absentees</string>
    <string name="al">Absentees List</string>
    <string name="verify">Verify</string>
    <string name="incharge_dash">Dashboard (Class In-Charge)</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="pv">Please Verify</string>
    <string name="pc">Please check if the absentees are listed below</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="otherday">Otherday</string>
    <string name="yourclasses">Your Classes</string>
    <string name="fltv">Select  the  below  options</string>
    <string name="es">Create SlipTest</string>
    <string name="vs">View SlipTest</string>
    <string name="view_students">View Students</string>
    <string name="se">Exam</string>
    <string name="setag">Tap  on  the  exam  to  view  detailed  info</string>
    <string name="maxmark">Maximum mark</string>
    <string name="score">Score</string>
    <string name="viewscoreTop">Tap on the sliptest to view detailed info</string>
    <string name="datecolumn">Date</string>
    <string name="idxcolumn"> # </string>
    <string name="portioncolumn">Portion</string>
    <string name="graphcolumn">Percentage %</string>
    <string name="st">Slip Test</string>
    <string name="stname">Slip Test Name :</string>
    <string name="maxmarc">Max Mark :</string>
    <string name="date">Enter Date :</string>
    <string name="date2">Date</string>
    <string name="entersliptest">Enter Sliptest Name</string>
    <string name="portions">Click here to select portions</string>
    <string name="portion">Portions</string>
    <string name="manualportion">Enter title of your choice</string>
    <string name="sliptests">Selected slipTest will appear here</string>
    <string name="stdate">Slip test date</string>
    <string name="marks">Marks</string>
    <string name="term">Term</string>
    <string name="percentage">Percentage</string>
    <string name="grade">Grade</string>
    <string name="grades">Grades</string>
    <string name="grade_system">Grade System : </string>
    <string name="reset">Reset</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="enter">Enter marks for created sliptest</string>
    <string name="update_mark">Update marks for created slipTest</string>
    <string name="enterst">Enter marks for selected slipTest</string>
    <string name="updatest">Update marks for selected slipTest</string>
    <string name="sliptest">SlipTest</string>
    <string name="projects">Projects</string>
    <string name="activities">Activities</string>
    <string name="evaluation">Evaluation Type</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="clear">Clear</string>
    <string name="total_days">Total Days :</string>
    <string name="enter_grade">Enter Grade</string>
    <string name="enter_marks">Enter Marks</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="minus">AB</string>
    <string name="syncme">sync the data</string>
    <string name="title_activity_alarm_activiity">AlarmActiviity</string>
    <string name="title_activity_master__auth">Master_Auth</string>
    <string name="adminLogin">Admin Login</string>
    <string name="adminusername">Admin Username</string>
    <string name="add">Add</string>
    <string name="hwmessage">Enter Homework</string>
    <string name="hwpt">Tap on the list to view homework assigned</string>
    <string name="title_activity_prepare_data">PrepareData</string>
    <string name="title_activity_intermediate">Intermediate</string>
    <string name="crash_toast_text">Oops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="no_absent">No Absentees</string>
    <string name="crash">Something went wrong, will be rectified soon.</string>
    <string name="syncing">Tab is in sync, please wait.</string>
    <string name="buffer_full">Please do the sync.</string>
    <string name="copy_hw">Copy homework to:</string>
    <string name="select_clas">select class</string>
    <string name="select_sec">select section</string>
    <string name="send_sms">Send SMS to:</string>
    <string name="all_students">All Students</string>
    <string name="sel_student">Select Students</string>
    <string name="male_students">All Male Students</string>
    <string name="female_students">All Female Students</string>
    <string name="all_students_mes">Text sms will be sent to all students.</string>
    <string name="all_male_stud_mes">Text sms will be sent to all male students.</string>
    <string name="all_female_stud_mes">Text sms will be sent to all female students.</string>
    <string name="search">Search Student</string>
    <string name="students">Students</string>
    <string name="studentname">Student Name</string>
    <string name="attendinfo">Attendance information</string>
    <string name="month">Month</string>
    <string name="noofdays">Days Present</string>
    <string name="daysabs">Days Absent</string>
    <string name="average">Average (%)</string>
    <string name="absent">Absent</string>
    <string name="total">No of Evaluations</string>
    <string name="sub_teacher">Subject Teacher</string>
    <string name="subject">Subject</string>
    <string name="slno">S.No</string>
    <string name="max_mark">Max Mark</string>
    <string name="min_mark">Min Mark</string>
    <string name="exam">Exam</string>
    <string name="stud_avg">Student avg / Class avg</string>
    <string name="teacher">Teacher</string>
    <string name="activity">Activity</string>
    <string name="subact">Sub Activity</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="gen_log">Generate Log File</string>
    <string name="title_activity_syncing">Syncing</string>
    <string name="noatt">Attendance is not taken for this day.</string>
    <string name="nohomework">Homework is not assigned for this day.</string>
    <string name="coscholastic2">Co-scholastic area</string>
    <string name="stoan">Select the options as need</string>
    <string name="remark">Remark</string>
    <string name="insertA">Insert A for all</string>
    <string name="resolving">Resolving Errors</string>
    <string name="bugs">Touch here to sync and have internet accesible</string>
    <string name="server_resolve">Tab is in Sync</string>
    <string name="cce_profile">CCE Profile</string>
    <string name="profile">Profile</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="days_attended">Days Attended</string>
    <string name="title_activity_process_files">ProcessFiles</string>
    <string name="title_activity_internet_block">InternetBlock</string>
    <string name="internet_block_1">Tab is not connected to Internet. Please check internet connection.</string>
    <string name="internet_block_2">Steps to check internet connection</string>
    <string name="internet_steps_1">Please check whether router is ON.</string>
    <string name="internet_steps_2">Please check whether tab is in WiFi zone.</string>
    <string name="internet_steps_3">If the problem still persists then please restart the tab.</string>
    <string name="internet_steps_4">Steps for restarting the tab:</string>
    <string name="internet_steps_5">Hold the power button until a menu pops up</string>
    <string name="internet_steps_6">Select Reboot</string>
    <string name="internet_steps_7">Select OK</string>
    <string name="ok">OK</string>
    <string name="title_activity_update_apk">UpdateApk</string>
    <string name="update_apk">A new version of application is available, please click the update button to confirm and continue.</string>
    <string name="update_apk_wifi">*tab should be in wifi zone.</string>
    <string name="update_apk_button">Update the application</string>
    <string name="ed_up_mapped_students">Edit / Update Mapped Students</string>
    <string name="map_students">Map Selected Subjects to Students</string>
    <string name="group_subject">Subject Group / Subjects</string>
    <string name="save">Save</string>
    <string name="create_exam">Create Exam</string>
    <string name="update_exam">Update Exam</string>
    <string name="cr_ed_act">Create / Edit Activity</string>
    <string name="cr_ed_subact">Create / Edit SubActivity</string>
    <string name="copy_ex_struc">Copy Exam Structure</string>
    <string name="exam_create">Exam Create</string>
    <string name="exam_update">Exam Update</string>
    <string name="sel_sub_group">Select Subject Group</string>
    <string name="sub_partition">Subject Partition</string>
    <string name="class_incharge">Class InCharge :</string>
    <string name="switch_class">Switch Class</string>
    <string name="admission_no">Admission No</string>
    <string name="add_student">Add Student</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="colon">:</string>
    <string name="clas">Class</string>
    <string name="sec">Section</string>
    <string name="roll_no">Roll No *</string>
    <string name="father">Father\'s Name *</string>
    <string name="weightage">Weightage</string>
    <string name="cancel">Cancel</string>
    <string name="calculation">Calculation :</string>
    <string name="sum">Sum</string>
    <string name="avg">Average</string>
    <string name="bestof">Best of :</string>
    <string name="delete">Delete</string>
    <string name="logout">logout</string>
    <string name="dummy">.</string>
</resources>