<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard_item"
            android:checked="false"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/attendance_item"
            android:checked="false"
            android:icon="@drawable/attendance"
            android:title="@string/attendance" />

        <item
            android:id="@+id/homework_item"
            android:checked="false"
            android:icon="@drawable/homework"
            android:title="@string/homework" />

        <item
            android:id="@+id/co_scholastic_item"
            android:checked="false"
            android:icon="@drawable/homework"
            android:title="@string/coscholastic" />

        <item
            android:id="@+id/cce_student_profile_item"
            android:checked="false"
            android:icon="@drawable/homework"
            android:title="@string/cce_student_profile" />

        <item
            android:id="@+id/sms_item"
            android:checked="false"
            android:icon="@drawable/homework"
            android:title="@string/sms" />

        <item
            android:id="@+id/map_student_subject_item"
            android:checked="false"
            android:icon="@drawable/homework"
            android:title="@string/map_student_subject" />

        <item
            android:id="@+id/map_subject_teacher_item"
            android:checked="false"
            android:icon="@drawable/homework"
            android:title="@string/map_subject_teacher" />

        <item
            android:id="@+id/student_profile_item"
            android:checked="false"
            android:icon="@drawable/user"
            android:title="@string/student_profile" />

    </group>
</menu>