<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.teacher.activity.Dashboard">

    <item
        android:id="@+id/dummy"
        android:title="@string/dummy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_queue"
        android:icon="@drawable/queue"
        android:title="@string/action_queue"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchId"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="always" />

</menu>
