<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/divider"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:text="@string/update"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/calculation"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:checked="true"
            android:text="@string/sum"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/avg"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/bestof"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/bestof"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/teal_border" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/max_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxmark"
            android:inputType="number"
            android:textColor="@color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hided"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/weightage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weightage"
            android:inputType="number"
            android:textColor="@color/black" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/teal_button_selector"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_delete"
            android:text="@string/delete"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/update"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:text="@string/update"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

    </LinearLayout>

</LinearLayout>