<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_micromax">

    <LinearLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <TextView
            android:id="@+id/syncTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/no_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_view"
        android:paddingEnd="2dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="2dp"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/sync_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/top_view"
        android:onClick="syncClicked"
        android:padding="10dp"
        android:text="@string/syncme"
        android:textColor="@color/light_black" />

    <View
        android:id="@+id/ll"
        android:layout_width="400dp"
        android:layout_height="395dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#66FFFFFF"
        android:orientation="vertical" />

    <View
        android:id="@+id/viewlayout"
        android:layout_width="400dp"
        android:layout_height="5dp"
        android:layout_above="@id/ll"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/centerll"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_above="@id/viewlayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_layout"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_field"
            android:clickable="true"
            android:gravity="center"
            android:onClick="usernameClicked"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_field"
            android:clickable="true"
            android:gravity="center"
            android:onClick="passwordClicked"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </LinearLayout>

    <ImageView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerll"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-60dp"
        android:contentDescription="@string/cc"
        android:src="@drawable/logo_background" />

    <View
        android:id="@+id/bottomViewCenter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="@color/light_black" />

    <Button
        android:id="@+id/num0"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/bottomViewCenter"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/bottomViewCenter"
        android:background="@drawable/button_selector"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/numclear"
        android:layout_width="115dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@id/bottomViewCenter"
        android:layout_toRightOf="@id/bottomViewCenter"
        android:background="@drawable/button_selector"
        android:text="@string/clear"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@id/num0"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/eight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@id/num8"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@id/num8"
        android:layout_toLeftOf="@id/num8"
        android:background="@drawable/button_selector"
        android:text="@string/seven"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@id/num8"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@id/num8"
        android:layout_toRightOf="@id/num8"
        android:background="@drawable/button_selector"
        android:text="@string/nine"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@id/num8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/five"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@id/num5"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@id/num5"
        android:layout_toLeftOf="@id/num5"
        android:background="@drawable/button_selector"
        android:text="@string/four"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@id/num5"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@id/num5"
        android:layout_toRightOf="@id/num5"
        android:background="@drawable/button_selector"
        android:text="@string/six"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@id/num5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/two"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@id/num2"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@id/num2"
        android:layout_toLeftOf="@id/num2"
        android:background="@drawable/button_selector"
        android:text="@string/one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/num3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@id/num2"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@id/num2"
        android:layout_toRightOf="@id/num2"
        android:background="@drawable/button_selector"
        android:text="@string/three"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

</RelativeLayout>